--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ body, h1, h2, h3, h4, h5, p, blockquote, pre, hr, dl, dd, ol, ul, figure{
 
 html {
   height: 100vh;
-  padding: 1em;
+  padding: 1em 0;
 }
 
 header {
@@ -20,7 +20,7 @@ header {
 }
 
 hr {
-
+  border-width: 3px;
 }
 
 body {
@@ -40,11 +40,15 @@ p {
 
 fieldset {
   border: none;
-  margin-top: 20 auto;
+  padding-top: 25px;
 }
 
 input {
   background-color: #ffffff;
+}
+
+label {
+  padding-right: 10px;
 }
 
 form input {
@@ -56,4 +60,8 @@ form input {
 body {
   top: 50%;
   left: 50%;
+}
+
+.red {
+  color: red;
 }
